--- a/src/index.css
+++ b/src/index.css
@@ -9,14 +9,13 @@
 
 @media (max-width:768px) {
   .card-grid {
-    grid-template-columns: 1fr 1 fr;
+    grid-template-columns: 1fr 1fr;
   }
 }
 
 @media (max-width: 480px) {
   .card-grid {
     grid-template-columns: 1fr;
-    /* Una columna en pantallas pequeñas */
   }
 }
 
@@ -37,10 +36,7 @@ code {
 }
 
 .favButton {
-
-  /*align-items: center; /* Centra verticalmente */
   justify-content: center;
-  /* Centra horizontalmente */
   margin-top: 1vw;
   background-color: #000080e4;
   padding: 10px;
@@ -52,7 +48,6 @@ code {
   font-weight: bold;
   transition: transform 0.3s ease, background-color 0.3s ease;
   border-radius: 5px;
-  /* Bordes redondeados */
 }
 
 h1 {
@@ -60,11 +55,8 @@ h1 {
   padding: 2rem 0;
   font-size: 2.5rem;
   font-weight: 700;
-  /* Más grueso */
   color: #b50909;
-  /* Rojo de la barra para mantener coherencia */
   text-transform: uppercase;
-  /* Texto en mayúsculas */
   margin-bottom: 1.5rem;
 }
 
@@ -80,7 +72,6 @@ nav {
   top: -0.3vw;
   right: 10vw;
   height: 4vw;
-  /* color: #f0f0f0; */
   font-weight: 400;
   font-size: 1 vw;
   cursor: "pointer";
@@ -99,7 +90,6 @@ nav {
 
 
 nav button {
-
   background-color: transparent;
   position: relative;
   border: none;
@@ -109,17 +99,13 @@ nav button {
   padding: 0;
   cursor: pointer;
   border-radius: 50%;
-  /* Forma circular */
   padding: 5 px;
-  /* Espacio interno para destacar el ícono */
   border: 1px solid #b50909;
-  /* Bordes finos para integrarse mejor */
   top: 3px;
   margin-left: 1rem;
   transition: transform 0.3s;
   transform: scale(1.2);
   filter: brightness(1.3);
-
 }
 
 
@@ -131,13 +117,11 @@ a {
 
 }
 
-
 #social-icons {
   position: static;
   background-color: transparent;
   width: 25px;
   filter: invert(1);
-  width: 25px;
   margin: 0;
   padding: 0;
   border: none;
@@ -166,7 +150,6 @@ form {
 }
 
 .card {
-
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -179,6 +162,10 @@ form {
   transition: transform 0.3s ease, box-shadow 0.3s ease;
 }
 
+.dentist-info {
+  text-align: center; 
+  margin-top: 2vw; 
+}
 
 
 .card button:hover {
@@ -189,11 +176,9 @@ form {
 
 .card:hover {
   transform: scale(1.05);
-  /* Aumenta ligeramente el tamaño */
   box-shadow: 0px 6px 12px rgba(0, 0, 0, 0.2);
-  /* Sombra más intensa al pasar el cursor */
   border: 1px solid rgba(0, 100, 231, 0.5);
-  /* border: 0.5px solid rgba(0, 100, 231, 0.375); */
+  border: 0.5px solid rgba(0, 100, 231, 0.375); 
 }
 
 .card-grid {
@@ -211,22 +196,44 @@ table {
   border-spacing: 0;
   width: 100%;
   display: table;
-  border: 1px solid #ccc;
+  border: 1px solid #f5f0f000;
   margin-top: 10vw;
+  background-color: #ffffff;
+  color: #333333;
+  transition: background-color 0.3s ease, color 0.3s ease;
 
 }
 
 td,
 th {
-  border: 1px solid #dddddd;
+  border: 1px solid #b5b5b5;
   text-align: left;
   padding: 8px;
+  font-family: 'Roboto', sans-serif;
+  /* color: #333333; */
 }
 
 tr:nth-child(even) {
 
-  background-color: #dddddd;
-  background-color: #efececf3;
+  background-color: #f9f9f9;
+
+}
+
+tr:nth-child(odd) {
+  background-color: #ffffff;
+
+}
+
+th {
+  background-color: #b50909da;
+  color: #ffffff;
+  text-transform: uppercase;
+  font-weight: bold;
+  font-size: 1rem;
+}
+
+tr:hover {
+  background-color: #f5c2c2;
 }
 
 section {
@@ -241,8 +248,8 @@ section {
 }
 
 .dark {
-  background-color: #000000d4 !important;
-  color: white !important;
+  background-color: #2a2a2a !important;
+  color: #f0f0f0 !important;
 }
 
 .dark a {
